# kalc

./: .gitignore  CMakeLists.txt
example/: basic.kalc
src/: cmdline.c  cmdline.h  kalc.c  mode.c  mode.h
src/parser/: lexer.c  lexer.h  parse.c  parse.h  split.h
src/runtime/: core.c  core.h  defc.h
